--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -9,7 +7,7 @@ services:
       - '3000:3000'
     env_file:
       - .env
-
+    command: npm run start:dev
     depends_on:
       - db
     volumes:
@@ -21,7 +19,7 @@ services:
     container_name: mysql-db
     restart: unless-stopped
     ports:
-      - '3306:3306'
+      - '3307:3306'
     env_file:
       - .env
     volumes:
