--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -23,4 +23,5 @@ RUN npm run build
 EXPOSE 3000
 
 # Start the app
-CMD ["node", "dist/main"]
+# CMD ["node", "dist/main"]
+CMD ["npm", "run", "start:dev"]
