--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/api/**",
+        "destination": "http://192.168.1.45:3000/api"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
